# casper-agentvault

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
agents/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
agents/src/: agent-runner.ts  coordinator.test.ts  coordinator.ts  guardian-agent.ts  index.ts  llm.ts  marketplace-agent.ts  parse-response.ts  rwa-agent.ts  types.ts  vault-agent.ts
contracts/agentvault-core/: .env.example  .gitignore  Cargo.toml  Odra.toml  build.rs  rust-toolchain
contracts/agentvault-core/resources/: casper-test-contracts.toml
contracts/agentvault-core/scripts/: build-windows.ps1  generate-deploy-key.mjs  install-wasm-tools.ps1
contracts/agentvault-core/src/: attestation.rs  escrow.rs  lib.rs  vault.rs
docs/: BUILDATHON_CHECKLIST.md  DEMO_PLAYBOOK.md  JUDGE_PLAYBOOK.md  TESTNET.md  demo-dry-run-hashes.json
frontend/: .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentVaultDashboard.tsx  SiteBackground.tsx
frontend/hooks/: useContractActions.ts  useContractDeploy.ts
frontend/lib/: site.ts
frontend/public/: llms.txt
frontend/scripts/: check-deploy-key.cjs  check-tx.cjs  deploy-odra-contracts.cjs  dry-run-demo-txs.cjs  generate-deploy-key.cjs  inspect-contract.cjs  inspect-package.cjs  (+4 more)
(+54 files in other folders)
