[package]
name = "agentvault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = "2.8.1"
odra-modules = "2.8.1"

[dev-dependencies]
odra-test = "2.8.1"

[build-dependencies]
odra-build = "2.8.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = "2.8.1"
# Optional: the livenet CLI stack (casper-client) only compiles on unix hosts,
# so it is feature-gated to keep `cargo test` working on Windows.
odra-cli = { version = "2.8.1", optional = true }

[features]
cli = ["dep:odra-cli"]

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"
test = false

[[bin]]
name = "agentvault_core_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "agentvault_core_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "agentvault_core_cli"
path = "bin/cli.rs"
test = false
required-features = ["cli"]

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3